[tool.poetry]
name = "dcov"
version = "0.1.0"
description = "A package for calculating the sample distance covariance"
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
