[tool.poetry]
name = "dcov"
version = "0.1.0"
description = "A package for calculating the sample distance covariance"
authors = ["Bastian Rieck <bastian@rieck.me>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = ">=1.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
